check accuracy metrics

--- a/check.ipynb
+++ b/check.ipynb
@@ -1,80 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "output = \"\"\"[[CREATE TABLE top_posts ( id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, user_id INT, title TEXT NOT NULL, body TEXT NOT NULL, created_at)   -> schema.rename_column \"things\", \"age\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.id  \"user_id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"    -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create\"\"\"\n",
-    "label = \"\"\", schema.types.integer \"ALTER TABLE things ADD COLUMN age INT NOT NULL\"   -> schema.add_column \"things\", \"cat\", schema.types.integer \"ALTER TABLE things ADD COLUMN cat INT NOT NULL\"   -> schema.add_column \"things\", \"paw\", schema.types.integer \"ALTER TABLE things ADD COLUMN paw INT NOT NULL\"   -> schema.add_column \"things\", \"price\", schema.types.integer \"ALTER TABLE things ADD COLUMN price INT NOT NULL\"   -> schema.add_column \"things\", \"tags\", schema.types.text \"ALTER TABLE things ADD COLUMN tags TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_id\", schema.types.integer \"ALTER TABLE things ADD COLUMN user_id INT NOT NULL\"   -> schema.add_column \"things\", \"user_name\", schema.types.text \"ALTER TABLE things ADD COLUMN user_name TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_type\", schema.types.text \"ALTER TABLE things ADD COLUMN user_type TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_url\", schema.types.text \"ALTER TABLE things ADD COLUMN user_url TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_url_name\", schema.types\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[CREATE TABLE top_posts ( id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, user_id INT, title TEXT NOT NULL, body TEXT NOT NULL, created_at)   -> schema.rename_column \"things\", \"age\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.id  \"user_id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"    -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ", schema.types.integer \"ALTER TABLE things ADD COLUMN age INT NOT NULL\"   -> schema.add_column \"things\", \"cat\", schema.types.integer \"ALTER TABLE things ADD COLUMN cat INT NOT NULL\"   -> schema.add_column \"things\", \"paw\", schema.types.integer \"ALTER TABLE things ADD COLUMN paw INT NOT NULL\"   -> schema.add_column \"things\", \"price\", schema.types.integer \"ALTER TABLE things ADD COLUMN price INT NOT NULL\"   -> schema.add_column \"things\", \"tags\", schema.types.text \"ALTER TABLE things ADD COLUMN tags TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_id\", schema.types.integer \"ALTER TABLE things ADD COLUMN user_id INT NOT NULL\"   -> schema.add_column \"things\", \"user_name\", schema.types.text \"ALTER TABLE things ADD COLUMN user_name TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_type\", schema.types.text \"ALTER TABLE things ADD COLUMN user_type TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_url\", schema.types.text \"ALTER TABLE things ADD COLUMN user_url TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_url_name\", schema.types\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "datasets = load_dataset(\"jitx/distillation_code_100\", split=\"train\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['santacoder_prompts', 'fim_inputs', 'label_middles', 'santacoder_outputs', 'openai_rationales'],\n",
-       "    num_rows: 100\n",
-       "})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datasets.filter(lambda example: 'schema.types.integer' in example[''])"
+    "## Output from model"
    ]
   },
   {
@@ -83,12 +14,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t5_output = \"\"\"[[CREATE TABLE top_posts ( id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, user_id INT, title TEXT NOT NULL, body TEXT NOT NULL, created_at)   -> schema.rename_column \"things\", \"age\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.id  \"user_id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"    -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create\"\"\"\n",
+    "santacoder_label = \"\"\", schema.types.integer \"ALTER TABLE things ADD COLUMN age INT NOT NULL\"   -> schema.add_column \"things\", \"cat\", schema.types.integer \"ALTER TABLE things ADD COLUMN cat INT NOT NULL\"   -> schema.add_column \"things\", \"paw\", schema.types.integer \"ALTER TABLE things ADD COLUMN paw INT NOT NULL\"   -> schema.add_column \"things\", \"price\", schema.types.integer \"ALTER TABLE things ADD COLUMN price INT NOT NULL\"   -> schema.add_column \"things\", \"tags\", schema.types.text \"ALTER TABLE things ADD COLUMN tags TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_id\", schema.types.integer \"ALTER TABLE things ADD COLUMN user_id INT NOT NULL\"   -> schema.add_column \"things\", \"user_name\", schema.types.text \"ALTER TABLE things ADD COLUMN user_name TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_type\", schema.types.text \"ALTER TABLE things ADD COLUMN user_type TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_url\", schema.types.text \"ALTER TABLE things ADD COLUMN user_url TEXT NOT NULL\"   -> schema.add_column \"things\", \"user_url_name\", schema.types\"\"\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "datasets = load_dataset(\"jitx/distillation_code_100\", split=\"train\")\n",
     "d1 = datasets.filter(lambda example: 'schema.types.integer' in example['santacoder_outputs'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +52,7 @@
        " 'openai_rationales': 'The code contains MoonScript functions that define various database operations. Each function receives arguments to perform the operation and returns the corresponding SQL query as a string. The operations include adding/dropping columns, renaming tables/columns, and creating new tables with specified columns and data types.'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,69 +221,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## T5 Generation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer\n",
-    "from transformers import T5ForConditionalGeneration\n",
-    "from transformers import DataCollatorForSeq2Seq\n",
-    "import wandb\n",
-    "\n",
-    "from datasets import load_dataset\n",
     "from transformers import AutoTokenizer, T5ForConditionalGeneration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = T5ForConditionalGeneration.from_pretrained(\"google/flan-t5-small\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FIM_PREFIX = \"<fim-prefix>\"\n",
-    "FIM_MIDDLE = \"<fim-middle>\"\n",
-    "FIM_SUFFIX = \"<fim-suffix>\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"google/flan-t5-small\")\n",
-    "addtional_tokens = tokenizer.special_tokens_map['additional_special_tokens']\n",
-    "addtional_tokens.extend([FIM_PREFIX, FIM_MIDDLE, FIM_SUFFIX])\n",
-    "tokenizer.add_special_tokens({\n",
-    "        \"additional_special_tokens\": addtional_tokens,\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,50 +255,188 @@
        "Embedding(32103, 512)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "model = T5ForConditionalGeneration.from_pretrained(\"google/flan-t5-small\")\n",
+    "FIM_PREFIX = \"<fim-prefix>\"\n",
+    "FIM_MIDDLE = \"<fim-middle>\"\n",
+    "FIM_SUFFIX = \"<fim-suffix>\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google/flan-t5-small\")\n",
+    "addtional_tokens = tokenizer.special_tokens_map['additional_special_tokens']\n",
+    "addtional_tokens.extend([FIM_PREFIX, FIM_MIDDLE, FIM_SUFFIX])\n",
+    "tokenizer.add_special_tokens({\n",
+    "        \"additional_special_tokens\": addtional_tokens,\n",
+    "})\n",
     "model.resize_token_embeddings(len(tokenizer))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/transformers/generation/utils.py:1254: UserWarning: Using the model-agnostic default `max_length` (=20) to control thegeneration length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "input_ids = tokenizer.encode(d1[0]['fim_inputs'], return_tensors=\"pt\")"
+    "input_ids = tokenizer.encode(d1[0]['fim_inputs'], return_tensors=\"pt\")\n",
+    "output = tokenizer.decode(model.generate(input_ids)[0], max_new_tokens=512)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pad> [[CREATE TABLE <unk>top_posts<unk> ( <unk>id\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[CREATE TABLE top_posts ( id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, user_id INT, title TEXT NOT NULL, body TEXT NOT NULL, created_at)   -> schema.rename_column \"things\", \"age\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.id  \"user_id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"   -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create_table \"top_posts\",   \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\"    -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\"   name: \"schema.create_table\" -> schema.create\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t5_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def compute_metrics(predictions, labels):\n",
+    "    predictions = np.where(\n",
+    "        predictions != -100,\n",
+    "        predictions,\n",
+    "        tokenizer.pad_token_id\n",
+    "    )\n",
+    "    # 2 spaces was replaced by \\t\n",
+    "    decoded_preds = tokenizer.batch_decode(\n",
+    "        predictions,\n",
+    "        max_length=512,\n",
+    "        skip_special_tokens=True\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    labels = np.where(labels != -100, labels, tokenizer.pad_token_id)\n",
+    "    decoded_labels = tokenizer.batch_decode(\n",
+    "        labels,\n",
+    "        skip_special_tokens=True\n",
+    "    )\n",
+    "\n",
+    "    acc = np.mean(np.array(decoded_preds) == np.array(decoded_labels))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return {'accuracy11': acc}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t5_output_input_ids = tokenizer.encode(t5_output, return_tensors=\"pt\")\n",
+    "santa_output_input_ids = tokenizer.encode(santacoder_label, return_tensors=\"pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<pad> [[CREATE TABLE <unk>top_posts<unk> ( <unk>id'"
+       "['[[CREATE TABLE top_posts ( id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, user_id INT, title TEXT NOT NULL, body TEXT NOT NULL, created_at) -> schema.rename_column \"things\", \"age\" -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\" name: \"schema.create_table\" -> schema.create_table \"top_posts\", \"id\", schema.types.id \"user_id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\" -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\" name: \"schema.create_table\" -> schema.create_table \"top_posts\", \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\" -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\" name: \"schema.create_table\" -> schema.create_table \"top_posts\", \"id\", schema.types.integer \"ALTER TABLE items CHANGE COLUMN cat paw INT NOT NULL\" -> schema.rename_table \"goods\", \"sweets\" \"RENAME TABLE goods TO sweets\" name: \"schema.create_table\" -> schema.create']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer.decode(model.generate(input_ids)[0])"
+    "tokenizer.batch_decode(\n",
+    "        t5_output_input_ids,\n",
+    "        skip_special_tokens=True\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy11': 1.0}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_metrics(t5_output_input_ids, t5_output_input_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy11': 0.0}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_metrics(t5_output_input_ids, santa_output_input_ids)\n"
+   ]
   }
  ],
  "metadata": {
